--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,6 +12,13 @@
 }
 </style>
 
+<script>
+   var x= '<%=message %>'
+   if(x != "") {
+      alert(x)
+   }
+</script>
+
 
    <div class="container">
 
