--- a/views/dairy.ejs
+++ b/views/dairy.ejs
@@ -3,90 +3,25 @@
 <link rel="stylesheet" href="styleDairy.css">
 <link rel="stylesheet" href="mobile/mobDairy.css">
 
-   <div class="container1" id="c">
-      <div class="logo">
-         <img src="assets/logo_ccexpress.webp" alt="" onContextMenu="return false;">
-         <a href="/logout" class="btn">Logout
-            <span></span><span></span><span></span><span></span>
-         </a>
-
-      </div>
-
-      <div class="top-container">
-         <h1>Hello, <%=name %></h1>
-         <p>What's on your mind today...</p>
-      </div>
-
-      <div class="second-container">
-         <div class="quote">
-            <h2><%=quote %></h2>
-            <p>-<%=author %></p>
-         </div>
-
-         <div class="info">
-            <h2>Its Monday</h2>
-            <h3 id="time"></h3>
-            <p><%=cityName %></p>
-            <div class="temp">
-               <h3><%=temp %> °C</h3>
-               <img src=<%=iconUrl %> alt="">
-               <!-- <h3>25 °C</h3>
-               <img src="http://openweathermap.org/img/wn/03n@2x.png" alt=""> -->
-            </div>
-         </div>
-      </div>
-   </div>
-
-   <hr>
-
-   <div class="container2" id="">
-      <a href="/archives" class="archived btn">Archived Entries
-         <span></span><span></span><span></span><span></span>
-      </a>
-      <div class="compose">
-         <a href="/compose">
-            <box-icon id="plus" name='plus-medical' class="plus-icon" size='lg' color='#bbbbbb'></box-icon>
-         </a>
-      </div>
-      <% const arr= dairyContent 
-         arr.map(a=>a).reverse().map(myFunction)%>
-      <% function myFunction(num) { console.log%>
-      <div class="content" id="content-border" style="border-top-color: <%=num.headerColor %>;">
-         <h2>
-            <%=num.date %>
-            <div>
-               <a href="/archived/<%=num.entryId %>">
-                  <box-icon name='archive-in' class='archive'></box-icon>
-               </a>
-               <a href="/delete/<%=num.entryId %>">
-                  <box-icon name='trash' class='trash'></box-icon>
-               </a>
-            </div>
-         </h2>
-         <% if(num.content.length > 29) {%>
-            <p><%=num.content.substring(0, 30) %>...</p>
-         <% } %>
-
-         <%if(num.content.length <= 29) {%>
-            <p><%=num.content%></p>
-         <% } %>
-         
-         <a href="/entry/<%=num.entryId %> " class="read-more">
-            <box-icon name='right-arrow' type='solid' color='#FFF01F' size='xs'></box-icon>Read more
-         </a>
-      </div>
-      <% } %>
-   </div>
-
-   <%- include("common/footer") -%>
-
-</body>
-
 <script>
+   const d = new Date();
+
+   const weekday = new Array(7);
+   weekday[0] = "Sunday";
+   weekday[1] = "monday";
+   weekday[2] = "Tuesday";
+   weekday[3] = "Wednesday";
+   weekday[4] = "Thursday";
+   weekday[5] = "Friday";
+   weekday[6] = "Saturday";
+
+   let day = weekday[d.getDay()];
+
+   document.getElementById("date").textContent = day
+
    let imgNo = Math.floor(Math.random() * 3) + 1;
 
    setInterval(() => {
-      const d = new Date();
       let hours = d.getHours();
       let minutes = d.getMinutes();
 
@@ -104,11 +39,92 @@
    document.getElementById("c").style.backgroundImage = "url('assets/dairyImg" + imgNo + ".webp')";
 </script>
 
+<div class="container1" id="c">
+   <div class="logo">
+      <img src="assets/logo_ccexpress.webp" alt="" onContextMenu="return false;">
+      <a href="/logout" class="btn">Logout
+         <span></span><span></span><span></span><span></span>
+      </a>
+
+   </div>
+
+   <div class="top-container">
+      <h1>Hello, <%=name %></h1>
+      <p>What's on your mind today...</p>
+   </div>
+
+   <div class="second-container">
+      <div class="quote">
+         <h2><%=quote %></h2>
+         <p>-<%=author %></p>
+      </div>
+
+      <div class="info">
+         <h2 id="date">Its Monday</h2>
+         <h3 id="time"></h3>
+         <p><%=cityName %></p>
+         <div class="temp">
+            <h3><%=temp %> °C</h3>
+            <img src=<%=iconUrl %> alt="">
+            <!-- <h3>25 °C</h3>
+               <img src="http://openweathermap.org/img/wn/03n@2x.png" alt=""> -->
+         </div>
+      </div>
+   </div>
+</div>
+
+<hr>
+
+<div class="container2" id="">
+   <a href="/archives" class="archived btn">Archived Entries
+      <span></span><span></span><span></span><span></span>
+   </a>
+   <div class="compose">
+      <a href="/compose">
+         <box-icon id="plus" name='plus-medical' class="plus-icon" size='lg' color='#bbbbbb'></box-icon>
+      </a>
+   </div>
+   <% const arr= dairyContent 
+         arr.map(a=>a).reverse().map(myFunction)%>
+   <% function myFunction(num) { console.log%>
+   <div class="content" id="content-border" style="border-top-color: <%=num.headerColor %>;">
+      <h2>
+         <%=num.date %>
+         <div>
+            <a href="/archived/<%=num.entryId %>">
+               <box-icon name='archive-in' class='archive'></box-icon>
+            </a>
+            <a href="/delete/<%=num.entryId %>">
+               <box-icon name='trash' class='trash'></box-icon>
+            </a>
+         </div>
+      </h2>
+      <% if(num.content.length > 29) {%>
+      <p><%=num.content.substring(0, 30) %>...</p>
+      <% } %>
+
+      <%if(num.content.length <= 29) {%>
+      <p><%=num.content%></p>
+      <% } %>
+
+      <a href="/entry/<%=num.entryId %> " class="read-more">
+         <box-icon name='right-arrow' type='solid' color='#FFF01F' size='xs'></box-icon>Read more
+      </a>
+   </div>
+   <% } %>
+</div>
+
+<%- include("common/footer") -%>
+
+</body>
+
+
+
 <script>
    var pre = document.getElementById('abc');
 
    function myFunc() {
-     pre.style.display = 'none';
+      pre.style.display = 'none';
    }
 </script>
 
