--- a/views/dairy.ejs
+++ b/views/dairy.ejs
@@ -3,42 +3,6 @@
 <link rel="stylesheet" href="styleDairy.css">
 <link rel="stylesheet" href="mobile/mobDairy.css">
 
-<script>
-   const d = new Date();
-
-   const weekday = new Array(7);
-   weekday[0] = "Sunday";
-   weekday[1] = "monday";
-   weekday[2] = "Tuesday";
-   weekday[3] = "Wednesday";
-   weekday[4] = "Thursday";
-   weekday[5] = "Friday";
-   weekday[6] = "Saturday";
-
-   let day = weekday[d.getDay()];
-
-   document.getElementById("date").textContent = day
-
-   let imgNo = Math.floor(Math.random() * 3) + 1;
-
-   setInterval(() => {
-      let hours = d.getHours();
-      let minutes = d.getMinutes();
-
-      if ((hours >= 0 && hours < 9)) {
-         hours = "0" + hours;
-      }
-      if ((minutes >= 0 && minutes <= 9)) {
-         minutes = "0" + minutes;
-      }
-
-      document.getElementById("time").textContent = hours + " : " + minutes;
-
-   }, 1000);
-
-   document.getElementById("c").style.backgroundImage = "url('assets/dairyImg" + imgNo + ".webp')";
-</script>
-
 <div class="container1" id="c">
    <div class="logo">
       <img src="assets/logo_ccexpress.webp" alt="" onContextMenu="return false;">
@@ -60,7 +24,7 @@
       </div>
 
       <div class="info">
-         <h2 id="date">Its Monday</h2>
+         <h2 id="date"></h2>
          <h3 id="time"></h3>
          <p><%=cityName %></p>
          <div class="temp">
@@ -118,7 +82,41 @@
 
 </body>
 
+<script>
+   const d = new Date();
 
+   const weekday = new Array(7);
+   weekday[0] = "Sunday";
+   weekday[1] = "monday";
+   weekday[2] = "Tuesday";
+   weekday[3] = "Wednesday";
+   weekday[4] = "Thursday";
+   weekday[5] = "Friday";
+   weekday[6] = "Saturday";
+
+   let day = weekday[d.getDay()];
+
+   document.getElementById("date").textContent = 'Its ' + day
+
+   let imgNo = Math.floor(Math.random() * 3) + 1;
+   document.getElementById("c").style.backgroundImage = "url('assets/dairyImg" + imgNo + ".webp')";
+
+   setInterval(() => {
+      let hours = d.getHours();
+      let minutes = d.getMinutes();
+
+      if ((hours >= 0 && hours < 9)) {
+         hours = "0" + hours;
+      }
+      if ((minutes >= 0 && minutes <= 9)) {
+         minutes = "0" + minutes;
+      }
+
+      document.getElementById("time").textContent = hours + " : " + minutes;
+
+   }, 1000);
+
+</script>
 
 <script>
    var pre = document.getElementById('abc');
