edited files for location

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include("common/header") -%>
+<%- include("api") -%> 
 
 <link rel="stylesheet" href="styleIndex.css">
 <link rel="stylesheet" href="mobile/mobIndex.css">
