--- a/views/dairy.ejs
+++ b/views/dairy.ejs
@@ -1,4 +1,5 @@
 <%- include("common/header") -%>
+<%- include("api") -%> 
 
 <link rel="stylesheet" href="styleDairy.css">
 <link rel="stylesheet" href="mobile/mobDairy.css">
@@ -28,10 +29,10 @@
          <h3 id="time"></h3>
          <p><%=cityName %></p>
          <div class="temp">
-            <h3><%=temp %> °C</h3>
-            <img src=<%=iconUrl %> alt="">
-            <!-- <h3>25 °C</h3>
-               <img src="http://openweathermap.org/img/wn/03n@2x.png" alt=""> -->
+            <!-- <h3><%=temp %> °C</h3>
+            <img src=<%=iconUrl %> alt=""> -->
+            <h3>25 °C</h3>
+               <img src="http://openweathermap.org/img/wn/03n@2x.png" alt="">
          </div>
       </div>
    </div>
