--- a/views/api.ejs
+++ b/views/api.ejs
@@ -30,6 +30,7 @@
 
 			getapiWeather(api_url2);
 
+			document.getElementById("cityName").textContent = city
 			// show(data);
 		}
 		// Calling that async function
@@ -43,6 +44,9 @@
 			// Storing data in form of JSON
 			var data = await response.json();
 			console.log(data.main.temp);
+
+			document.getElementById("temperature").textContent = data.main.temp
+			document.getElementById("weatherImage").src = "http://openweathermap.org/img/wn/" + data.weather[0].icon + "@2x.png";
 			// show(data);
 		}
 	</script>
