--- a/views/login.ejs
+++ b/views/login.ejs
@@ -40,11 +40,11 @@
          <form action="/login" method="post" autocomplete="off">
             <div class="mail-container">
                <box-icon type='solid' name='envelope' size='20px' color='#252525'></box-icon>
-               <input type="email" name="username" id="" placeholder="Email" class="data email" required autofocus>
+               <input type="email" name="email" placeholder="Email" class="data email" required autofocus>
             </div>
             <div class="password-container">
                <box-icon type='solid' name='lock-alt' class="lock" size='20px' color='#252525'></box-icon>
-               <input type="password" name="password" id="" placeholder="Password" class="data password" required>
+               <input type="password" name="password" placeholder="Password" class="data password" required>
             </div>
             <button type="submit" class="btn">Sign In</button>
          </form>
